--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
   <head>
     <!--HEAD START-->
-    <title>About Us</title>
+    <title>Rizwan | About Us</title>
     <!--::::: SUPPORT META :::::::-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -116,7 +116,7 @@
                     <li><a href="#service">Service</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li>
-                      <a href="#">Pages</a>
+                      <a href="#">Details</a>
                       <ul>
                         <li><a href="about.html">About</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -161,23 +161,31 @@
             </div>
             <div class="side-content">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                ratione reprehenderit, error qui enim sit ex provident iure,
-                dolor, nulla eaque delectus, repudiandae commodi. Velit
-                assumenda odit quisquam at, error suscipit unde, necessitatibus
-                ipsum ratione excepturi ducimus labore, totam dolorem.
+                Innovative and versatile Developer with a passion for driving
+                efficiency in realm of app and web design & development. Armed
+                with a dynamic skill set, I specialize in transforming concepts
+                into cutting-edge digital solutions. With a keen eye for detail
+                and a commitment to excellence, I consistently push boundaries
+                to deliver impactful results in the ever-evolving tech
+                landscape.
               </p>
             </div>
             <div class="side-social">
               <ul>
                 <li>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="https://github.com/MRizwan1057/" target="_blank"
+                    ><i class="fab fa-github"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a
+                    href="https://www.linkedin.com/in/rizwan-dev/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
                 </li>
                 <li>
                   <a href="#"><i class="fab fa-instagram"></i></a>
@@ -273,7 +281,7 @@
                   <img src="assets/img/icon/service1.svg" alt="" />
                 </div>
                 <div class="service-text">
-                  <h4>design principales</h4>
+                  <h4>Web Development</h4>
                   <p>
                     Need a project completed by an expert? Let’s go! Access a
                     Human Resources Consultant to answer questions
@@ -295,7 +303,7 @@
                   <img src="assets/img/icon/service2.svg" alt="" />
                 </div>
                 <div class="service-text">
-                  <h4>design principales</h4>
+                  <h4>App Development</h4>
                   <p>
                     Need a project completed by an expert? Let’s go! Access a
                     Human Resources Consultant to answer questions
@@ -318,7 +326,7 @@
                   <img src="assets/img/icon/service1.svg" alt="" />
                 </div>
                 <div class="service-text">
-                  <h4>design principales</h4>
+                  <h4>Bugs Fixing</h4>
                   <p>
                     Need a project completed by an expert? Let’s go! Access a
                     Human Resources Consultant to answer questions
@@ -357,8 +365,8 @@
             <div class="col-lg-5 align-self-center">
               <div class="primery-info-content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                  ratione reprehenderit
+                  Have a look at our recent works and projects that added values
+                  in the realm of design and development.
                 </p>
               </div>
             </div>
@@ -454,7 +462,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/socialcomm.jpg);
+                      background: url(assets/img/social/social1.png);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -465,7 +473,7 @@
                         <i class="fab fa-linkedin-in"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our Linkedin community!
+                        join our instagram community!
                       </p>
                     </a>
                   </div>
@@ -476,7 +484,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/socialcomm.jpg);
+                      background: url(assets/img/social/social2.png);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -487,7 +495,7 @@
                         <i class="fab fa-facebook-f"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our Facebook community!
+                        join our github community!
                       </p>
                     </a>
                   </div>
@@ -498,7 +506,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/socialcomm.jpg);
+                      background: url(assets/img/social/social3.png);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -507,28 +515,6 @@
                     <a href="">
                       <span class="single-social-icon">
                         <i class="fab fa-github"></i>
-                      </span>
-                      <p class="single-soicial-text">
-                        join our Github community!
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg">
-                <div class="single-social">
-                  <div
-                    class="sinlge-social-hover"
-                    style="
-                      background: url(assets/img/social/socialcomm.jpg);
-                      background-position: center;
-                      -webkit-background-size: cover;
-                      background-size: cover;
-                    "
-                  >
-                    <a href="">
-                      <span class="single-social-icon">
-                        <i class="fab fa-twitter"></i>
                       </span>
                       <p class="single-soicial-text">
                         join our X (Twitter) community!
@@ -542,7 +528,29 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/socialcomm.jpg);
+                      background: url(assets/img/social/social4.png);
+                      background-position: center;
+                      -webkit-background-size: cover;
+                      background-size: cover;
+                    "
+                  >
+                    <a href="">
+                      <span class="single-social-icon">
+                        <i class="fab fa-twitter"></i>
+                      </span>
+                      <p class="single-soicial-text">
+                        join our facebook community!
+                      </p>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg">
+                <div class="single-social">
+                  <div
+                    class="sinlge-social-hover"
+                    style="
+                      background: url(assets/img/social/social5.png);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -553,7 +561,7 @@
                         <i class="fab fa-instagram"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our linkedin community!
                       </p>
                     </a>
                   </div>
