--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <!--HEAD START-->
-    <title>Glint</title>
+    <title>Rizwan | Home</title>
     <!--::::: support meta :::::::-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -116,7 +116,7 @@
                     <li><a href="#service">Service</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li>
-                      <a href="#">Pages</a>
+                      <a href="#">Details</a>
                       <ul>
                         <li><a href="about.html">About</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -161,23 +161,31 @@
             </div>
             <div class="side-content">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                ratione reprehenderit, error qui enim sit ex provident iure,
-                dolor, nulla eaque delectus, repudiandae commodi. Velit
-                assumenda odit quisquam at, error suscipit unde, necessitatibus
-                ipsum ratione excepturi ducimus labore, totam dolorem.
+                Innovative and versatile Developer with a passion for driving
+                efficiency in realm of app and web design & development. Armed
+                with a dynamic skill set, I specialize in transforming concepts
+                into cutting-edge digital solutions. With a keen eye for detail
+                and a commitment to excellence, I consistently push boundaries
+                to deliver impactful results in the ever-evolving tech
+                landscape.
               </p>
             </div>
             <div class="side-social">
               <ul>
                 <li>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="https://github.com/MRizwan1057/" target="_blank"
+                    ><i class="fab fa-github"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a
+                    href="https://www.linkedin.com/in/rizwan-dev/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
                 </li>
                 <li>
                   <a href="#"><i class="fab fa-instagram"></i></a>
@@ -315,8 +323,8 @@
             <div class="col-lg-6 align-self-center">
               <div class="info-content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                  ratione reprehenderit, error qui enim sit ex provident
+                  How it started vs how it's going, some amazing journey to the
+                  destination
                 </p>
               </div>
             </div>
@@ -391,7 +399,7 @@
               <div class="colsm6 col-lg-3 text-center">
                 <div class="circle4 circle" id="circle4">
                   <strong></strong>
-                  <span>illustration</span>
+                  <span>App Design</span>
                 </div>
               </div>
             </div>
@@ -414,8 +422,8 @@
             <div class="col-lg-6 align-self-center">
               <div class="info-content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                  ratione reprehenderit, error qui enim sit ex provident
+                  Engaging interfaces crafted for seamless user experiences and
+                  heightened satisfaction.
                 </p>
               </div>
             </div>
@@ -428,7 +436,7 @@
                   <img src="assets/img/icon/service1.svg" alt="" />
                 </div>
                 <div class="service-text">
-                  <h4>design principales</h4>
+                  <h4>Web Design & Development</h4>
                   <p>
                     Need a project completed by an expert? Let’s go! Access a
                     Human Resources Consultant to answer questions
@@ -450,7 +458,7 @@
                   <img src="assets/img/icon/service2.svg" alt="" />
                 </div>
                 <div class="service-text">
-                  <h4>Unique Values</h4>
+                  <h4>App Design & Development</h4>
                   <p>
                     Need a project completed by an expert? Let’s go! Access a
                     Human Resources Consultant to answer questions
@@ -472,7 +480,7 @@
                   <img src="assets/img/icon/service3.svg" alt="" />
                 </div>
                 <div class="service-text">
-                  <h4>Style Components</h4>
+                  <h4>Bugs & Problems Solving</h4>
                   <p>
                     Need a project completed by an expert? Let’s go! Access a
                     Human Resources Consultant to answer questions
@@ -507,8 +515,8 @@
             <div class="col-lg-5 align-self-center">
               <div class="info-content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                  ratione reprehenderit
+                  Have a look at our recent works and projects that added values
+                  in the realm of design and development.
                 </p>
               </div>
             </div>
@@ -522,26 +530,26 @@
               <li>
                 <a href="portfolio.html">
                   <img src="assets/img/project/project1.png" alt="" />
-                  <div><span>Menu by Simon Jensen</span></div>
+                  <div><span>Latest Project</span></div>
                 </a>
               </li>
               <li>
                 <a href="portfolio.html">
                   <img src="assets/img/project/project2.png" alt="" />
-                  <div><span>Menu by Simon Jensen</span></div>
+                  <div><span>Latest Project</span></div>
                 </a>
               </li>
               <li>
                 <a href="portfolio.html">
                   <img src="assets/img/project/project3.png" alt="" />
-                  <div><span>Menu by Simon Jensen</span></div>
+                  <div><span>Latest Project</span></div>
                 </a>
               </li>
               <li>
                 <a href="portfolio.html">
                   <img src="assets/img/project/project4.png" alt="" />
                   <div>
-                    <span>Menu by Simon Jensen</span>
+                    <span>Latest Project</span>
                   </div>
                 </a>
               </li>
@@ -549,7 +557,7 @@
                 <a href="portfolio.html">
                   <img src="assets/img/project/project2.png" alt="" />
                   <div>
-                    <span>Menu by Simon Jensen</span>
+                    <span>Latest Project</span>
                   </div>
                 </a>
               </li>
@@ -573,8 +581,9 @@
             <div class="col-lg-5 align-self-center">
               <div class="info-content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                  ratione reprehenderit
+                  Hear ! what our happy and satisfied clients have to say about
+                  our professionalism and projects that are highly rated and
+                  recommended
                 </p>
               </div>
             </div>
@@ -608,7 +617,7 @@
                       which brought new technologes, new methodology, and a
                       fresh perspective to our project
                     </h4>
-                    <p>Jack Metiyo Shina, NYC, USA</p>
+                    <p>Chris Woakes, Leeds, UK</p>
                   </div>
                 </div>
                 <div class="testimonial">
@@ -622,7 +631,7 @@
                       which brought new technologes, new methodology, and a
                       fresh perspective to our project
                     </h4>
-                    <p>Jack Metiyo Shina, NYC, USA</p>
+                    <p>Salman bin Salman, Dubai, UAE</p>
                   </div>
                 </div>
               </div>
@@ -645,10 +654,7 @@
             </div>
             <div class="col-lg-6 align-self-center">
               <div class="info-content">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                  ratione reprehenderit
-                </p>
+                <p>Some useful options and payments for our target audience</p>
               </div>
             </div>
           </div>
@@ -689,7 +695,7 @@
                 </div>
                 <div class="service-text">
                   <h3>AGENCY</h3>
-                  <h5>best for small investors</h5>
+                  <h5>best for Businesses</h5>
                 </div>
                 <div class="separator"></div>
                 <div class="service-text">
@@ -716,7 +722,7 @@
                 </div>
                 <div class="service-text">
                   <h3>ENTERPRISE</h3>
-                  <h5>best for small investors</h5>
+                  <h5>best for elite investors</h5>
                 </div>
                 <div class="separator"></div>
                 <div class="service-text">
@@ -755,10 +761,7 @@
             </div>
             <div class="col-lg-5 align-self-center">
               <div class="info-content">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                  ratione reprehenderit
-                </p>
+                <p>Take a look at our monthly and weekly news and bolgs</p>
               </div>
             </div>
           </div>
@@ -770,10 +773,8 @@
                   <img src="assets/img/blog/team__1.png" alt="" />
                 </div>
                 <div class="blog-description">
-                  <p>September 28, 2019</p>
-                  <a href="single-blog.html"
-                    >Hypnosis 12 Steps To Acquire Mind Power...</a
-                  >
+                  <p>September 28, 2022</p>
+                  <a href="single-blog.html">Custom Development:...</a>
                   <a href="single-blog.html" class="readmore-btn"
                     ><i class="fal fa-arrow-right"></i> read more</a
                   >
@@ -786,10 +787,8 @@
                   </div>
                 </div>
                 <div class="blog-description">
-                  <p>September 28, 2019</p>
-                  <a href="single-blog.html"
-                    >Addiction When Gambling Becomes...</a
-                  >
+                  <p>October 23, 2022</p>
+                  <a href="single-blog.html">UI/UX Design Concepts...</a>
                   <a href="single-blog.html" class="readmore-btn"
                     ><i class="fal fa-arrow-right"></i> read more</a
                   >
@@ -802,10 +801,8 @@
                   </div>
                 </div>
                 <div class="blog-description">
-                  <p>September 28, 2019</p>
-                  <a href="single-blog.html"
-                    >Harness The Power Of Your Dreams...</a
-                  >
+                  <p>March 11, 2023</p>
+                  <a href="single-blog.html">Backend Optimization...</a>
                   <a href="single-blog.html" class="readmore-btn"
                     ><i class="fal fa-arrow-right"></i> read more</a
                   >
@@ -818,10 +815,8 @@
                   </div>
                 </div>
                 <div class="blog-description">
-                  <p>September 28, 2019</p>
-                  <a href="single-blog.html"
-                    >Addiction When Gambling Becomes...</a
-                  >
+                  <p>December 30, 2023</p>
+                  <a href="single-blog.html">Innovation Integration...</a>
                   <a href="single-blog.html" class="readmore-btn"
                     ><i class="fal fa-arrow-right"></i> read more</a
                   >
@@ -919,7 +914,7 @@
               <div class="space-40"></div>
               <div class="copyright">
                 <p>
-                  Designed & Developed by <span>Rizwan-Dev</span> all right
+                  Designed & Developed by <span>| Rizwan-Dev | </span> all right
                   reserved
                 </p>
               </div>
