--- a/about.html
+++ b/about.html
@@ -459,125 +459,7 @@
           </div>
         </div>
         <div class="space-100"></div>
-        <!--:::::SOCIAL AREA START :::::::-->
 
-        <div class="social-area">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg">
-                <div class="single-social">
-                  <div
-                    class="sinlge-social-hover"
-                    style="
-                      background: url(assets/img/social/social1.png);
-                      background-position: center;
-                      -webkit-background-size: cover;
-                      background-size: cover;
-                    "
-                  >
-                    <a href="">
-                      <span class="single-social-icon">
-                        <i class="fab fa-linkedin-in"></i>
-                      </span>
-                      <p class="single-soicial-text">
-                        join our instagram community!
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg">
-                <div class="single-social">
-                  <div
-                    class="sinlge-social-hover"
-                    style="
-                      background: url(assets/img/social/social2.png);
-                      background-position: center;
-                      -webkit-background-size: cover;
-                      background-size: cover;
-                    "
-                  >
-                    <a href="">
-                      <span class="single-social-icon">
-                        <i class="fab fa-facebook-f"></i>
-                      </span>
-                      <p class="single-soicial-text">
-                        join our github community!
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg">
-                <div class="single-social">
-                  <div
-                    class="sinlge-social-hover"
-                    style="
-                      background: url(assets/img/social/social3.png);
-                      background-position: center;
-                      -webkit-background-size: cover;
-                      background-size: cover;
-                    "
-                  >
-                    <a href="">
-                      <span class="single-social-icon">
-                        <i class="fab fa-github"></i>
-                      </span>
-                      <p class="single-soicial-text">
-                        join our X (Twitter) community!
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg">
-                <div class="single-social">
-                  <div
-                    class="sinlge-social-hover"
-                    style="
-                      background: url(assets/img/social/social4.png);
-                      background-position: center;
-                      -webkit-background-size: cover;
-                      background-size: cover;
-                    "
-                  >
-                    <a href="">
-                      <span class="single-social-icon">
-                        <i class="fab fa-twitter"></i>
-                      </span>
-                      <p class="single-soicial-text">
-                        join our facebook community!
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg">
-                <div class="single-social">
-                  <div
-                    class="sinlge-social-hover"
-                    style="
-                      background: url(assets/img/social/social5.png);
-                      background-position: center;
-                      -webkit-background-size: cover;
-                      background-size: cover;
-                    "
-                  >
-                    <a href="">
-                      <span class="single-social-icon">
-                        <i class="fab fa-instagram"></i>
-                      </span>
-                      <p class="single-soicial-text">
-                        join our linkedin community!
-                      </p>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--:::::SOCIAL AREA END :::::::-->
         <img
           src="assets/img/icon/cta1.png"
           alt=""
@@ -662,10 +544,10 @@
             <div class="col-lg-6 m-auto text-center">
               <div class="footer-menu">
                 <ul>
-                  <li><a href="#">about me</a></li>
-                  <li><a href="#">career</a></li>
+                  <li><a href="#">about</a></li>
+                  <li><a href="#">service</a></li>
                   <li><a href="#">blog</a></li>
-                  <li><a href="#">gallery</a></li>
+                  <li><a href="#">portfolio</a></li>
                   <li><a href="#">contact me</a></li>
                 </ul>
               </div>
